--- a/style.css
+++ b/style.css
@@ -5,12 +5,11 @@
 }
 
 :root{
-    --bg-color: #ffffff;
+    --bg-color: #fbfbfc;
     --header-txt: #0e0e0e;
     --subtitle-txt: #b2b2b2;
     --footer-bg: #000000;
     --footer-txt: #7f7f7f;
-
     
 }
 
