--- a/download.css
+++ b/download.css
@@ -39,7 +39,7 @@
     max-width: 800px;
     margin: 0 auto;
     padding: 10px;
-    margin-bottom: 200px;
+    margin-bottom: 100px;
     margin-top: 50px;
     box-shadow: 0px 0px 6px 6px var(--footer-txt);
 }
@@ -113,4 +113,29 @@
     background-color: var(--footer-bg);
     border-radius: 20px;
     color: var(--bg-color);
+}
+
+.calendario {
+    margin: 0 auto;
+    border-collapse: collapse;
+    font-family: 'text';
+    margin-bottom: 50px;
+}
+
+.calendario th, .calendario td {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: center;
+}
+
+.calendario th {
+    background-color: #f2f2f2;
+}
+
+.calendario td {
+    cursor: pointer;
+}
+
+.calendario td:hover {
+    background-color: #f0f0f0;
 }
